# bare-metal-manager-core

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile-package.toml  Makefile.toml  README.md  STYLE_GUIDE.md  skaffold.yml
.cargo/: config.toml
.github/workflows/: build-boot-artifacts.yml  ci.yaml  fern-docs-preview-build.yml  pr-description.yml  promotion.yaml  rest-build-binaries.yml  rest-build-push-docker.yml  rest-build-push-service.yml  rest-ci.yml  rest-helm-workflows.yml  rest-lint-and-test.yml  rest-prepare-build-info.yml
bluefield/: Makefile.toml
crates/admin-cli/: AGENTS.md  Cargo.toml  DEVELOPMENT.md  cli_domains.yaml
crates/api/: Cargo.toml
crates/api-core/: Cargo.toml
crates/api-db/: Cargo.toml
crates/api-model/: Cargo.toml
crates/api-test-helper/: Cargo.toml
crates/api-web/: Cargo.toml
crates/api/src/: api.rs  dpf_services.rs  ethernet_virtualization.rs  lib.rs  main.rs  redfish.rs  setup.rs
crates/api/src/auth/: internal_rbac_rules.rs
crates/api/src/cfg/: README.md
crates/api/src/dpa/: handler.rs
crates/api/src/handlers/: attestation.rs  component_manager.rs  expected_power_shelf.rs  expected_switch.rs  managed_host.rs  mod.rs  network_segment.rs  rack.rs  vpc.rs  vpc_peering.rs  vpc_prefix.rs
crates/api/src/instance/: mod.rs
crates/api/src/machine_update_manager/: dpu_nic_firmware.rs  mod.rs
crates/api/src/mqtt_state_change_hook/: hook.rs
crates/api/src/rack/: firmware_update.rs  mod.rs  rms_client.rs
crates/api/src/state_controller/: common_services.rs  external_service_error.rs  mod.rs
crates/api/src/state_controller/machine/: dpf.rs  handler.rs  health_report.rs  mod.rs  redfish.rs  write_ops.rs
crates/api/src/state_controller/machine/handler/: attestation.rs  dpf.rs  sku.rs
crates/api/src/state_controller/rack/: maintenance.rs
crates/api/src/tests/: dpu_nic_firmware.rs  expected_power_shelf.rs  expected_switch.rs  instance_allocate.rs  machine_admin_force_delete.rs  machine_states.rs  machine_update_manager.rs  maintenance.rs  mod.rs  network_segment.rs  nvl_instance.rs  set_primary_dpu.rs  site_explorer.rs  vpc_peering.rs
crates/api/src/tests/common/api_fixtures/: mod.rs  vpc.rs
crates/api/src/tests/dpf/: duplicate_events.rs  happy_path.rs  reprovisioning.rs  stale_labels.rs  waiting_for_ready.rs
crates/api/src/tests/metrics_fixtures/: test_network_segment_metrics_tor.txt
crates/api/src/tests/power_shelf_state_controller/: error_state.rs  mod.rs
crates/api/src/tests/rack_state_controller/: handler.rs  mod.rs
crates/api/src/tests/switch_state_controller/: mod.rs
crates/api/src/web/: nvlink.rs
crates/api/templates/: index.html  logical_partition_detail.html
crates/bmc-explorer/: Cargo.toml
crates/bmc-explorer-cli/: Cargo.toml
crates/bmc-explorer-cli/src/: main.rs
crates/bmc-mock/: Cargo.toml
crates/bmc-proxy/: Cargo.toml  README.md
crates/component-manager/: Cargo.toml
crates/config-version/: Cargo.toml
crates/dns/: Cargo.toml
crates/dpa/: Cargo.toml  build.rs
crates/dpa-interface-controller/: Cargo.toml
crates/dpa-manager/: Cargo.toml
crates/dpf/: Cargo.toml  README.md
crates/dpu-fmds-shared/: Cargo.toml
crates/dsx-exchange-consumer/: README.md
crates/firmware/: README.md
crates/fmds/: Cargo.toml
crates/health/: Cargo.toml
crates/ib-partition-controller/: Cargo.toml
crates/ipmi/: Cargo.toml
crates/ipxe-renderer/: README.md
crates/libmlx/: Cargo.toml  README.md
crates/libnmxc/: Cargo.toml
crates/libnmxc/src/: lib.rs  nmxc_api.rs  response.rs
crates/libnmxm/: Cargo.toml
crates/machine-a-tron/: Cargo.toml  README.md
crates/machine-controller/: Cargo.toml  build.rs
crates/macros/: Cargo.toml
crates/measured-boot/: README.md
crates/metrics-endpoint/: Cargo.toml
crates/metrics-utils/: Cargo.toml
deploy/: DNS.md  README.md
docs/: README.md  bootable_artifacts.md  codebase_overview.md  development.md  faq.md  glossary.md  index.md  index.yml  release-notes.md
fern/: .gitignore  README.md  docs.yml  fern.config.json  generators.yml
helm/: Chart.yaml  PREREQUISITES.md  README.md  values.yaml
helm-prereqs/: clean.sh  health-check.sh  setup.sh  values.yaml
openapi/: spec.yaml
pxe/: Makefile.toml
rest-api/: .coderabbit.yaml  .gitattributes  .gitignore  .golangci.yml  .pre-commit-config.yaml  .revive.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THIRD-PARTY-LICENSES  VERSION  go.mod  go.sum
(+3804 files in other folders)
