#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-api"
version = "0.0.1"
edition.workspace = true
description = "Carbide is a Bare Metal Provisioning system with auto-discovery and API based machine manipulation"
license.workspace = true
authors.workspace = true

# Thin top-level crate: the `carbide-api` binary plus a small `carbide` library
# that re-exports the server entrypoint. The implementation lives in
# `carbide-api-core`; the admin web UI lives in `carbide-api-web`. This crate
# wires the two together, which is what keeps `carbide-api-core` from having to
# depend on `carbide-api-web` (a cycle).
[lib]
name = "carbide"

[[bin]]
name = "carbide-api"
path = "src/main.rs"

[dependencies]
# Internal dependencies. PLEASE KEEP ALPHABETIZED ORDER.
carbide-api-core = { path = "../api-core", default-features = false }
carbide-api-db = { path = "../api-db", default-features = false }
carbide-api-web = { path = "../api-web" }
carbide-secrets = { path = "../secrets" }
carbide-version = { path = "../version" }

# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
clap = { workspace = true }
eyre = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-rustls",
  "migrate",
  "postgres",
] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[features]
default = ["linux-build"]
linux-build = ["carbide-api-core/linux-build"]

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
