[package]
name = "bmc-explorer-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
carbide-ipmi = { path = "../ipmi" }
carbide-redfish = { path = "../redfish" }
carbide-secrets = { path = "../secrets", features = ["test-support"] }
carbide-site-explorer = { path = "../site-explorer" }

arc-swap = { workspace = true }
clap = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
