#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "libnmxc"
version = "0.1.0"
edition.workspace = true
exclude = ["/tests"]
license.workspace = true
authors.workspace = true

[lib]
name = "libnmxc"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "net",
  "time",
  "rt-multi-thread",
] }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
thiserror = { workspace = true }
tonic-prost.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
